# fast_inverse_square_root_quake

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  benchmark_fast_invsqrt.cpp  derive_fast_invsqrt_jan_kadlec.cpp  derive_fast_invsqrt_quake.cpp  fast_inverse_sqrt.ipynb
